--- a/core/templates/core/const/navbar.html
+++ b/core/templates/core/const/navbar.html
@@ -4,13 +4,30 @@
     <div class="text-3xl font-bold">
         Beacon
     </div>
-
+    {% if user.is_authenticated %}
+        <div>
+            <img src="{{ user.userprofile.avatar_url }}" alt="Avatar" width="100" style="border-radius: 50%;">
+        </div>
+    {% else %}
     <div>
-        <a href="{% url 'social:begin' 'github' %}">
-            <button class="btn btn-info flex items-center">
-                <img src="{% static 'core/images/github.svg' %}" alt="">
-                <p>Continue with GitHub</p>
-            </button>
-        </a>
+        <button class="btn btn-info flex items-center justify-center" onclick="my_modal_2.showModal()">
+            <img src="{% static 'core/images/github.svg' %}" alt="">
+            <p>Continue with GitHub</p>
+        </button>
+        <dialog id="my_modal_2" class="modal">
+            <div class="modal-box bg-black outline outline-white/50">
+                <h3 class="text-lg font-bold text-center text-white/80">Authenticate with Github to get started</h3>
+                <a class="flex justify-center" href="{% url 'social:begin' 'github' %}">
+                    <button class="btn btn-info flex items-center justify-center">
+                        <img src="{% static 'core/images/github.svg' %}" alt="">
+                        <p>Authenticate</p>
+                    </button>
+                </a>
+            </div>
+            <form method="dialog" class="modal-backdrop">
+                <button>close</button>
+            </form>
+        </dialog>
     </div>
+    {% endif %}
 </nav>
