--- a/core/templates/core/const/navbar.html
+++ b/core/templates/core/const/navbar.html
@@ -7,7 +7,7 @@
     {% if user.is_authenticated %}
         <div class="flex items-center space-x-10">
             <div class="flex items-center space-x-8">
-                <a href="">Discover</a>
+                <a href="{% url 'dashboard' %}">Discover</a>
                 <a href="">Favorites</a>
             </div>
             
