--- a/core/templates/core/const/searchbar.html
+++ b/core/templates/core/const/searchbar.html
@@ -1,5 +1,5 @@
 <!-- Search Sidebar -->
-<div class="w-full flex-shrink-0">
+<div class="w-full flex-shrink-0 flex flex-col">
   <form method="get" class="bg-white/10 p-6 rounded-xl space-y-6 text-white w-full">
     <h2 class="text-xl font-semibold">Filter Issues</h2>
 
@@ -25,4 +25,16 @@
       Search
     </button>
   </form>
+
+  <div class="mt-8 flex justify-center items-center gap-3 text-white">
+    {% if current_page > 1 %}
+        <a href="?page={{ current_page|add:-1 }}{% if request.GET.label %}&label={{ request.GET.label }}{% endif %}{% if request.GET.language %}&language={{ request.GET.language }}{% endif %}" class="px-3 py-1 bg-gray-800 rounded hover:bg-gray-700">Previous</a>
+    {% endif %}
+
+    <span class="px-3 py-1 bg-gray-700 rounded">Page {{ current_page }} of {{ last_page }}</span>
+
+    {% if current_page < last_page %}
+        <a href="?page={{ current_page|add:1 }}{% if request.GET.label %}&label={{ request.GET.label }}{% endif %}{% if request.GET.language %}&language={{ request.GET.language }}{% endif %}" class="px-3 py-1 bg-gray-800 rounded hover:bg-gray-700">Next</a>
+    {% endif %}
+    </div>
 </div>
