feat: changed border color

--- a/core/templates/core/pages/dashboard.html
+++ b/core/templates/core/pages/dashboard.html
@@ -14,7 +14,7 @@
     <div class="md:w-3/4">
       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
         {% for card in cards %}
-          <div class="bg-black rounded-xl shadow p-5 border border-gray-100">
+          <div class="bg-black rounded-xl shadow p-5 border border-white/30">
             <div class="mb-2">
               <div class="flex justify-between items-center">
                 <a href="{{ card.repo_url }}" target="_blank" class="text-lg font-semibold text-white hover:underline">
