--- a/core/templates/core/pages/dashboard.html
+++ b/core/templates/core/pages/dashboard.html
@@ -25,8 +25,8 @@
             </div>
 
             <div class="mt-3">
-              <a href="{{ card.issue_url }}" target="_blank" class="block font-medium text-gray-800 hover:underline">
-                🐛 {{ card.issue_title }}
+              <a href="{{ card.issue_url }}" target="_blank" class="block font-medium text-white/70 hover:underline">
+                <span class="text-cyan-200">Issue:</span> {{ card.issue_title }}
               </a>
               <div class="flex flex-wrap mt-2 gap-1">
                 {% for label in card.labels %}
