feat: adjusted username

--- a/core/templates/core/const/navbar.html
+++ b/core/templates/core/const/navbar.html
@@ -13,7 +13,7 @@
             <div class="dropdown dropdown-end">
                 <img class="cursor-pointer" tabindex="0" role="button" src="{{ user.userprofile.avatar_url }}" alt="Avatar" width="40" style="border-radius: 50%;">
                 <ul tabindex="0" class="dropdown-content menu bg-black outline outline-white/30 rounded-box z-1 w-52 p-2 shadow-sm">
-                    <p>{{ user.username }}</p>
+                    <p class="py-2">{{ user.username }}</p>
                     <li class="hover:bg-white/20"><a>Profile</a></li>
                     <li class="hover:bg-red-300/80"><a href="{% url 'logout' %}">Logout</a></li>
                 </ul>
